--- a/.drone.yml
+++ b/.drone.yml
@@ -19,6 +19,6 @@ steps:
       - build
     commands:
       - make push-remote
-    when:
-      branch:
-        - master
+    # when:
+    #   branch:
+    #     - master
